--- a/pages/new_index/new_index.wxss
+++ b/pages/new_index/new_index.wxss
@@ -48,12 +48,19 @@ page{
   text-align: center;
   color: #fff;
 }
-.b-func .left-view,.b-func .right-view{
+.mid-view,.left-view,.right-view{
+  box-shadow: 0px 0px 10px silver;/*阴影效果*/
+}
+.b-func .left-view,.b-func .right-view,.b-func .mid-view{
   background-color: #F2F4F6;
   border-radius: 10rpx;
   border: 1px solid #F2F4F6;
   width: 200rpx;
   height: 190rpx;
+
+}
+.b-func .mid-view{
+  background: linear-gradient(to right, transparent, mistyrose);
 }
 .b-func .left-view{
   margin-left: 10rpx;
@@ -63,18 +70,18 @@ page{
   margin-right: 10rpx;
   background-image: linear-gradient(to right, #9fa5d5, #e8f5c8);
 }
-.b-func .right-view .right-view-icon-text{
+.b-func .right-view .right-view-icon-text,.b-func .mid-view .mid-view-icon-text{
   font-weight: 200;
   margin: 20rpx 0;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
 }
-.b-func .right-view .right-view-icon-image{
+.b-func .right-view .right-view-icon-image,.b-func .mid-view .mid-view-icon-image{
   display: flex;
   justify-content: center;
   width: 100%;
 }
-.b-func .right-view .right-view-icon-image image{
+.b-func .right-view .right-view-icon-image image,.b-func .mid-view .mid-view-icon-image image{
   width: 80rpx;
   height: 80rpx;
 }
