--- a/physical-detail/pages/tijian_details/index.wxss
+++ b/physical-detail/pages/tijian_details/index.wxss
@@ -1,5 +1,6 @@
 /* pages/suifan_details/index.wxss */
 @import "../../../styles/fonticon.wxss";
+@import "../../static//style/iconfont.wxss";
 .body{
   width: 100%;
   /* min-height: 100vh; */
@@ -65,7 +66,16 @@
   align-items: center;
   justify-content: center;
 }
-
+.card {
+  margin-top: 10rpx;
+  width: 94%;
+  margin-left: 2%;
+  background: rgb(255, 255, 255);
+  border-radius: 0.4em;
+  box-shadow: 0.3em 0.3em 0.7em #00000015;
+  transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  border: rgb(250, 250, 250) 0.2em solid;
+ }
 .male_height, .female_height{
   writing-mode: vertical-lr;
   padding-right: 20rpx;
